--- a/config/config-defaults.yaml
+++ b/config/config-defaults.yaml
@@ -5,9 +5,9 @@ dataset:
 
   load_counts:
     data_seed: 97
-    counts_fp: data/mutation_types_raw_counts.csv
-    annotation_fp: data/pcawg_cancer_types.csv
-    annotation_subset: ["Breast","Prostate","Kidney","Panc"]
+    counts_fp: ["data/pcawg_counts.csv", "data/hartwig_counts.csv", ]
+    annotation_fp: ["data/pcawg_clinical_ann.csv", "data/hartwig_clinical_ann.csv"]
+    annotation_subset: null
 
   sim_from_sigs:
     sig_defs_fp: data/COSMIC_v3.2_SBS_GRCh37.txt
@@ -30,28 +30,16 @@ dataset:
 
 model:
   model_sel: tandtiss_lda
-  model_seed: 42
+  model_seed: 47
   J: 10
-  K: 8
+  K: 7
   alpha_bias: 1
   psi_bias: 0.1
   gamma_bias: 0.5
   beta_bias: 1
   init_strategy: kmeans
-  #log_every: 10000
 
 pymc3:
-  n: 10000
+  n: 15000
   method: advi
-  random_seed: 34
-  #obj_optimizer: [pm.adam, pm.sgd, pm.adagrad, pm.adadelta]
-  #more_obj_params: [learning_rate=0.1]
-        
-        
-        
-        
-        
-        
-        
-        
-    
+  random_seed: 23
