--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -26,5 +26,7 @@ sphinx:
 
 # Optionally declare the Python requirements required to build your docs
 python:
-   install:
-   - requirements: docs/requirements.txt
+  version: 3
+  install:
+  - requirements: docs/requirements.txt
+  system_packages: true
