--- a/setup.cfg
+++ b/setup.cfg
@@ -1,22 +1,6 @@
-[bumpversion]
-current_version = 0.0.3
-commit = True
-tag = False
-parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(?:\.dev(?P<dev>\d+))?
-serialize = 
-	{major}.{minor}.{patch}.dev{dev}
-	{major}.{minor}.{patch}
-
-[bumpversion:file:damuta/__init__.py]
-search = __version__ = "{current_version}"
-replace = __version__ = "{new_version}"
-
-[bumpversion:file:docs/conf.py]
-search = release = "{current_version}"
-replace = release = "{new_version}"
-
 [metadata]
 name = damuta
+version = 0.0.2
 author = Cait Harrigan
 author_email = charrigan@cs.toronto.edu
 description = Dirichlet allocation of mutations in cancer genomes
