--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -32,4 +32,11 @@ threadpoolctl==3.1.0
 typing_extensions==4.1.1
 wrapt==1.14.0
 xarray==2022.3.0
+pytest
+pytest-cov
+sphinx>=1.4
+nbsphinx
+sphinx-gallery
+nbsphinx-link
+ipykernel
 sphinx-rtd-theme
